--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
   </head>
   <body>
     <div class="flex-container">
+      <div class="score">
+        <h3>Player X</h3>
+      <p>Score:</p>
+      <p id="scorex"></p>
+      </div>
     <div class="wrapper">
         <h1>Tic Tac Toe</h1>
         <p id="turn">Next turn: X</p>
@@ -29,8 +35,13 @@
         </div>
       </div>
       <p id="result"></p>
+    <button id="reset">Reset</button>
     </div>
-    <a href="#" id="reset">Reset</a>
+    <div class="score">
+      <h3>Player O</h3>
+      <p>Score:</p>
+      <p id="scoreo"></p>
+    </div>
 </div>
 
     <script src="js/main.js"></script>
