--- a/index.html
+++ b/index.html
@@ -5,44 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/icon.png" type="image/x-icon" />
   </head>
   <body>
     <div class="flex-container">
       <div class="score">
         <h3>Player X</h3>
-      <p>Score:</p>
-      <p id="scorex"></p>
+        <p>Score:</p>
+        <p id="scorex"></p>
       </div>
-    <div class="wrapper">
+      <div class="wrapper">
         <h1>Tic Tac Toe</h1>
         <p id="turn">Next turn: X</p>
-      <div class="content">
-        <div class="column one">
-          <div class="row"></div>
-          <div class="row"></div>
-          <div class="row"></div>
+        <div class="content">
+          <div class="column one">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+          </div>
+          <div class="column two">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+          </div>
+          <div class="column three">
+            <div class="row"></div>
+            <div class="row"></div>
+            <div class="row"></div>
+          </div>
         </div>
-        <div class="column two">
-          <div class="row"></div>
-          <div class="row"></div>
-          <div class="row"></div>
-        </div>
-        <div class="column three">
-          <div class="row"></div>
-          <div class="row"></div>
-          <div class="row"></div>
-        </div>
+        <p id="result"></p>
+        <button id="reset">Reset</button>
       </div>
-      <p id="result"></p>
-    <button id="reset">Reset</button>
+      <div class="score">
+        <h3>Player O</h3>
+        <p>Score:</p>
+        <p id="scoreo"></p>
+      </div>
     </div>
-    <div class="score">
-      <h3>Player O</h3>
-      <p>Score:</p>
-      <p id="scoreo"></p>
-    </div>
-</div>
 
     <script src="js/main.js"></script>
   </body>
